# openliero

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  builds.json  builds_new.json  index.html  liero.code-workspace  vcpkg-configuration.json  vcpkg.json
.claude/plans/: arbitrary-map-sizes.plan.md
.github/workflows/: build.yml  clang-tidy.yml  relay-server.yml  test.yml
Profiles/: Joystick0.lpf
Setups/: orbmit.cfg
cmake/: GenerateVersion.cmake
data/: README.md
data/Profiles/: Joystick1.lpf
data/Setups/: liero.cfg  orbmit.cfg
dev/build-0246be5/: openliero.wasm
dev/build-09a4054/: openliero.wasm
dev/build-09aa8b1/: openliero.wasm
dev/build-0cf8b45/: openliero.js  openliero.wasm
dev/build-10d5b54/: openliero.wasm
dev/build-11bf110/: openliero.wasm
dev/build-12b02ca/: openliero.wasm
dev/build-1587a2d/: openliero.wasm
dev/build-18c9fe8/: openliero.wasm
dev/build-1a3f2ac/: openliero.wasm
dev/build-21ef73e/: openliero.data  openliero.wasm
dev/build-250ed1a/: openliero.wasm
dev/build-2638c9f/: openliero.wasm
dev/build-2f42415/: openliero.js  openliero.wasm
dev/build-373654c/: openliero.data  openliero.js  openliero.wasm
dev/build-44beabe/: openliero.wasm
dev/build-4995610/: openliero.js  openliero.wasm
dev/build-4abe95d/: openliero.wasm
dev/build-4b950e6/: openliero.wasm
dev/build-4bd0143/: openliero.wasm
dev/build-4e5e303/: openliero.js  openliero.wasm
dev/build-546a3e1/: openliero.html  openliero.js  openliero.wasm
dev/build-62f639a/: openliero.wasm
dev/build-70e10a1/: openliero.wasm
dev/build-728c30b/: openliero.wasm
dev/build-7432087/: openliero.js  openliero.wasm
dev/build-7777b98/: openliero.wasm
dev/build-799aff0/: openliero.js  (+1 more)
docs/: building.md  clang-flag-day.md  gvl-removal-plan.md  modern-level-authoring.md  post-gvl-cleanup-plan.md
packaging/: io.github.openliero.openliero.yml  openliero.desktop  openliero.metainfo.xml
scripts/: build-vendored-deps.sh  clang-tidy-all.sh  clang-tidy-diff.sh  clang-tidy-fix.sh  validate_tcs.sh
server/: protocol.go  relay.go  server.go  server_test.go
src/game/: CMakeLists.txt  bench.cpp  bench_format.cpp  bobject.cpp  bobject.hpp  bonus.cpp  bonus.hpp  common.cpp  common.hpp  common_model.hpp  console.cpp  console.hpp  constants.hpp  exactObjectList.hpp  fastObjectList.hpp  fileSelectorState.cpp  filesystem.cpp  filesystem.hpp  game.cpp  game.hpp  gameEntry.cpp  gamePlayState.cpp  gfx.cpp  gfx.hpp  inputState.cpp  keys.cpp  keys.hpp  level.cpp  level.hpp  lfs.hpp  main.cpp  mainMenuState.cpp  main_unix.cpp  main_win32.cpp  material.hpp  math.cpp  math.hpp  metadata.cpp  metadata.hpp  netConnectState.cpp  (+39 more)
src/game/ai/: astar.hpp  dijkstra.cpp  dijkstra.hpp  predictive_ai.cpp  predictive_ai.hpp  work_queue.hpp
src/game/controller/: commonController.cpp  commonController.hpp  controller.hpp  localController.cpp  localController.hpp  networkController.cpp  networkController.hpp  replayController.cpp  replayController.hpp  rollbackController.cpp  rollbackController.hpp  stats_presenter.cpp  stats_presenter.hpp
src/game/gfx/: bitmap.hpp  blit.cpp  blit.hpp  color.hpp  font.cpp  font.hpp  macros.hpp  palette.cpp  palette.hpp  renderer.cpp  renderer.hpp  shadow_query.hpp  sprite.hpp  text_cell.hpp
src/game/gvl/: README.md
src/game/gvl/include/gvl/containers/: bucket.hpp  list.hpp
src/game/gvl/include/gvl/io2/: convert.hpp  deflate_filter.hpp  stream.hpp
src/game/gvl/include/gvl/resman/: shared.hpp  shared_ptr.hpp
src/game/gvl/include/gvl/serialization/: archive.hpp  coding.hpp  context.hpp
src/game/gvl/src/containers/: list.cpp
src/game/gvl/src/io2/: stream.cpp
src/game/gvl/src/support/: platform.cpp
src/game/io/: coding.hpp  deflate.hpp  gvl_compat.hpp  stream.hpp
src/game/math/: rect.hpp
src/game/menu/: arrayEnumBehavior.hpp  booleanSwitchBehavior.cpp  booleanSwitchBehavior.hpp  enumBehavior.cpp  enumBehavior.hpp  fileSelector.hpp  hiddenMenu.cpp  hiddenMenu.hpp  integerBehavior.cpp  integerBehavior.hpp  itemBehavior.hpp  mainMenu.cpp  mainMenu.hpp  menu.cpp  menu.hpp  menuItem.cpp  menuItem.hpp  timeBehavior.cpp  timeBehavior.hpp
src/game/mixer/: mixer.cpp  mixer.hpp  player.cpp  player.hpp
src/game/net/: holepunch.cpp  holepunch.hpp  iceAgent.hpp  iceBridge.cpp  iceBridge.hpp  localaddr.cpp  session.cpp  session.hpp  signaling.cpp  signaling.hpp  stun.cpp  stun.hpp  tcArchive.cpp  tcArchive.hpp  transport.cpp  transport.hpp
src/game/rollback/: buffer.hpp
src/game/serialization/: archive.hpp  cereal_types.hpp  coding.hpp  context.hpp  except.hpp  fast_snapshot.hpp  snapshot.hpp  toml_adapter.hpp  toml_archive.hpp  weapsel_snapshot.hpp
src/gvl/: CMakeLists.txt  LICENSE  README.md
src/gvl/include/gvl/containers/: bucket.hpp  list.h  list.hpp  pairing_heap.hpp
src/gvl/include/gvl/crypt/: gash.hpp
src/gvl/include/gvl/io2/: convert.hpp  deflate_filter.hpp  fstream.hpp  stream.hpp
src/gvl/include/gvl/math/: cmwc.hpp  random.hpp  rect.hpp  vec.hpp
src/gvl/include/gvl/meta/: as_unsigned.hpp  is_ptr_convertible.hpp  meta.hpp  static_log2.hpp
src/gvl/include/gvl/resman/: shared.hpp  shared_ptr.hpp
src/gvl/include/gvl/serialization/: archive.hpp  coding.hpp  context.hpp  except.hpp  toml.hpp  toml_adapter.hpp
src/gvl/include/gvl/support/: bits.hpp  cstdint.hpp  debug.hpp  dummy_delete.hpp  functional.hpp  macros.hpp  opt.hpp  platform.h  platform.hpp  profile.hpp  type_info.hpp
src/gvl/include/gvl/system/: memory.hpp  system.hpp  windows.hpp
src/gvl/io2/: deflate_filter.hpp
src/gvl/serialization/: archive.hpp  toml.hpp
src/gvl/src/containers/: list.cpp
src/gvl/src/io2/: convert.cpp  stream.cpp
src/gvl/src/resman/: shared.cpp
src/gvl/src/support/: bits.c  bits.cpp  debug.cpp  platform.cpp  profile.cpp
src/gvl/src/system/: system.c
src/gvl/support/: platform.h
src/video_tool/: CMakeLists.txt  main.cpp  replay_to_video.cpp  replay_to_video.hpp  tools_main.cpp  video_recorder.h
tools/: cppcheck.sh  gen_stage4_anim.py  lev_extract.py  lev_gen.py
(+137 files in other folders)
